--- a/starter-code/sass/main.scss
+++ b/starter-code/sass/main.scss
@@ -20,12 +20,14 @@ body {
     font-family: PlusJakartaSans-Medium, sans-serif;
     background-color: var(--color-white);
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
-.header {
+header {
+    display: flex;
+    justify-content: center;
+}
+
+.navbar {
     width: 111rem;
     height: 10.518rem;
 
@@ -58,4 +60,8 @@ body {
             background-color: var(--color-blue-grey);
         }
     }
+}
+
+main {
+    width: 111rem;
 }
