--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ html {
 body {
   font-family: PlusJakartaSans-Medium, sans-serif;
   background-color: var(--color-white);
-  color: var(--color-grey); }
+  color: var(--color-grey);
+  font-size: 1.5rem; }
 
 h1 {
   font-family: PlusJakartaSans-ExtraBold;
@@ -28,18 +29,18 @@ h1 {
 
 h2 {
   font-family: PlusJakartaSans-ExtraBold;
-  font-size: 32px;
-  line-height: 40px; }
+  font-size: 3.2rem;
+  line-height: 4rem; }
 
 h3 {
   font-family: PlusJakartaSans-ExtraBold;
-  font-size: 24px;
-  line-height: 30px; }
+  font-size: 2.4rem;
+  line-height: 3rem; }
 
 p {
   font-family: PlusJakartaSans-Medium;
-  font-size: 18px;
-  line-height: 28px; }
+  font-size: 1.8rem;
+  line-height: 2.8rem; }
 
 footer {
   background-color: var(--color-dark-blue);
@@ -49,6 +50,9 @@ footer {
 header {
   display: flex;
   justify-content: center; }
+
+.content {
+  overflow: hidden; }
 
 .navbar {
   width: 111rem;
@@ -80,11 +84,11 @@ main {
 
 .presentation {
   width: 50%;
-  height: 359px; }
+  height: 35.9rem; }
   .presentation__title {
     font-family: PlusJakartaSans-ExtraBold;
-    font-size: 56px;
-    line-height: 70.56px;
+    font-size: 5.6rem;
+    line-height: 7.056rem;
     color: var(--color-dark-blue); }
   .presentation__text {
     width: 43rem;
@@ -124,15 +128,15 @@ main {
 .cards-container {
   width: 111rem;
   display: grid;
-  margin: 140px 0;
+  margin: 14rem 0;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 322px 322px;
-  grid-row-gap: 88px;
-  grid-column-gap: 30px; }
+  grid-template-rows: 32.2rem 32.2rem;
+  grid-row-gap: 8.8rem;
+  grid-column-gap: 3rem; }
 
 .card {
-  padding: 64px 32px 32px 32px;
-  border-radius: 15px;
+  padding: 6.4rem 3.2rem 3.2rem 3.2rem;
+  border-radius: 1.5rem;
   position: relative; }
   .card--title {
     background: var(--gradient-orange-pink); }
@@ -143,21 +147,21 @@ main {
     .card--text h3 {
       color: var(--color-dark-blue); }
     .card--text p {
-      margin-top: 24px; }
+      margin-top: 2.4rem; }
   .card__circle {
     position: absolute;
     background: var(--gradient-orange-pink);
-    width: 56px;
-    height: 56px;
-    border-radius: 28px;
-    top: -28px; }
+    width: 5.6rem;
+    height: 5.6rem;
+    border-radius: 2.8rem;
+    top: -2.8rem; }
   .card a {
     font-family: PlusJakartaSans-Bold;
-    font-size: 18px;
+    font-size: 1.8rem;
     color: var(--color-pink);
     text-decoration: none;
     position: absolute;
-    bottom: 40px; }
+    bottom: 4rem; }
     .card a:hover {
       opacity: .5; }
 
@@ -176,3 +180,28 @@ main {
     background-color: var(--color-dark-blue); }
     .footer__button:hover {
       background-color: var(--color-blue-grey); }
+
+@media (max-width: 1190px) {
+  html {
+    font-size: 55.5555555555%; }
+  .presentation {
+    height: 32.9rem; }
+    .presentation__title {
+      font-size: 40px;
+      line-height: 50.4px; }
+    .presentation__text {
+      width: 45rem;
+      margin: 4.6rem 0; }
+  .navbar,
+  .presentation-container,
+  .footer {
+    width: 689.8px; }
+  .cards-container {
+    width: 68.98rem;
+    margin: 14rem 0;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 32.2rem 32.2rem 32.2rem; }
+  .main-photo {
+    height: 55rem; }
+    .main-photo__picture img {
+      margin-top: -20.4rem; } }
