--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,6 +26,7 @@ body {
     font-family: PlusJakartaSans-Medium, sans-serif;
     background-color: var(--color-white);
     color: var(--color-grey);
+    font-size: 1.5rem;
 }
 
 // Typhography
@@ -37,20 +38,20 @@ h1 {
 
 h2 {
     font-family: PlusJakartaSans-ExtraBold;
-    font-size: 32px;
-    line-height: 40px;
+    font-size: 3.2rem;
+    line-height: 4rem;
 }
 
 h3 {
     font-family: PlusJakartaSans-ExtraBold;
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 2.4rem;
+    line-height: 3rem;
 }
 
 p {
     font-family: PlusJakartaSans-Medium;
-    font-size: 18px;
-    line-height: 28px;
+    font-size: 1.8rem;
+    line-height: 2.8rem;
 }
 
 ////////////////
@@ -65,6 +66,10 @@ footer {
 header {
     display: flex;
     justify-content: center;
+}
+
+.content {
+    overflow: hidden;
 }
 
 .navbar {
@@ -107,12 +112,12 @@ main {
 
 .presentation {
     width: 50%;
-    height: 359px;
+    height: 35.9rem;
 
     &__title {
         font-family: PlusJakartaSans-ExtraBold;
-        font-size: 56px;
-        line-height: 70.56px;
+        font-size: 5.6rem;
+        line-height: 7.056rem;
         color: var(--color-dark-blue);
     }
 
@@ -174,18 +179,18 @@ main {
 .cards-container {
     width: 111rem;
     display: grid;
-    margin: 140px 0;
+    margin: 14rem 0;
  
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 322px 322px;
+    grid-template-rows: 32.2rem 32.2rem;
  
-    grid-row-gap: 88px;
-    grid-column-gap: 30px;
+    grid-row-gap: 8.8rem;
+    grid-column-gap: 3rem;
 }
 
 .card {
-    padding: 64px 32px 32px 32px;
-    border-radius: 15px;
+    padding: 6.4rem 3.2rem 3.2rem 3.2rem;
+    border-radius: 1.5rem;
     position: relative;
 
     &--title {
@@ -204,27 +209,27 @@ main {
         }
 
         & p {
-            margin-top: 24px;
+            margin-top: 2.4rem;
         }
     }
 
     &__circle {
         position: absolute;
         background: var(--gradient-orange-pink);
-        width: 56px;
-        height: 56px;
-        border-radius: 28px;
-        top: -28px;
+        width: 5.6rem;
+        height: 5.6rem;
+        border-radius: 2.8rem;
+        top: -2.8rem;
     }
 
     & a {
         font-family: PlusJakartaSans-Bold;
-        font-size: 18px;
+        font-size: 1.8rem;
         color: var(--color-pink);
         text-decoration: none;
 
         position: absolute;
-        bottom: 40px;
+        bottom: 4rem;
 
         &:hover {
             opacity: .5;
@@ -254,4 +259,48 @@ main {
             background-color: var(--color-blue-grey);
         }
     }
+}
+
+@media (max-width: 1190px) { 
+    html {
+        font-size: 55.5555555555%;
+    }
+
+    .presentation {
+        height: 32.9rem;
+    
+        &__title {
+            font-size: 40px;
+            line-height: 50.4px;
+        }
+    
+        &__text {
+            width: 45rem;
+            margin: 4.6rem 0;
+        }
+    }
+
+    .navbar,
+    .presentation-container,
+    .footer {
+        width: 689.8px;
+    }
+
+    .cards-container {
+        width: 68.98rem;
+        margin: 14rem 0;
+     
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 32.2rem 32.2rem 32.2rem;
+    }
+
+    .main-photo {
+        height: 55rem;
+        &__picture {
+            & img {
+                margin-top: -20.4rem;
+            }
+        }
+    }
+
 }
