--- a/sass/main.scss
+++ b/sass/main.scss
@@ -306,6 +306,10 @@ main {
 }
 
 @media (max-width: 764px) { 
+    header {
+        margin-bottom: 20px;
+    }
+
     .presentation-container {
         flex-direction: column;
         max-width: 343px;
