--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ body {
   font-family: PlusJakartaSans-Medium, sans-serif;
   background-color: var(--color-white);
   color: var(--color-grey);
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  position: relative; }
 
 h1 {
   font-family: PlusJakartaSans-ExtraBold;
@@ -180,6 +181,18 @@ main {
     background-color: var(--color-dark-blue); }
     .footer__button:hover {
       background-color: var(--color-blue-grey); }
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  z-index: 9999999;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%); }
+
+.attribution a {
+  color: var(--color-white); }
 
 @media (max-width: 1190px) {
   html {
