--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,6 +27,8 @@ body {
     background-color: var(--color-white);
     color: var(--color-grey);
     font-size: 1.5rem;
+
+    position: relative;
 }
 
 // Typhography
@@ -259,6 +261,21 @@ main {
             background-color: var(--color-blue-grey);
         }
     }
+}
+
+.attribution { 
+    font-size: 11px; 
+    text-align: center; 
+    z-index: 9999999;
+
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+}
+
+.attribution a { 
+    color: var(--color-white); 
 }
 
 @media (max-width: 1190px) { 
