--- a/sass/main.scss
+++ b/sass/main.scss
@@ -267,6 +267,7 @@ main {
     font-size: 1.1rem; 
     text-align: center; 
     z-index: 9999999;
+    width: 100%;
 
     position: absolute;
     left: 50%;
