--- a/sass/main.scss
+++ b/sass/main.scss
@@ -243,6 +243,7 @@ main {
     width: 111rem;
     height: 10.518rem;
     z-index: 999;
+    padding-bottom: 1.1rem;
 
     display: flex;
     justify-content: space-between;
